--- a/style.css
+++ b/style.css
@@ -103,7 +103,7 @@ p {
 
 .boton {
     background-color: #0092a5;
-    padding: 1em;
+    padding: 1em 2em;
     border: none;
     color: white;
     text-transform: uppercase;
@@ -163,16 +163,58 @@ h4 {
 }
 
 .botonEncabezado {
-    background-color: #fff;
     color: #0092a5;
     margin-top: 1.5em;
     font-size: 1.3em;
     text-decoration: none;
+    background-image: linear-gradient(to right, #ECE9E6 0%, #FFFFFF 51%, #ECE9E6 100%);
 }
 
 .botonEncabezado:hover {
     text-decoration: underline;
-    background-color: #fdfdfd;
+}
+
+/*animaciones*/
+
+.hvr-float {
+    display: inline-block;
+    vertical-align: middle;
+    -webkit-transform: perspective(1px) translateZ(0);
+    transform: perspective(1px) translateZ(0);
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+    -webkit-transition-property: transform;
+    transition-property: transform;
+    -webkit-transition-timing-function: ease-out;
+    transition-timing-function: ease-out;
+}
+
+.hvr-float:hover,
+.hvr-float:focus,
+.hvr-float:active {
+    -webkit-transform: translateY(-5px);
+    transform: translateY(-5px);
+}
+
+.hvr-grow-shadow {
+    display: inline-block;
+    vertical-align: middle;
+    -webkit-transform: perspective(1px) translateZ(0);
+    transform: perspective(1px) translateZ(0);
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+    -webkit-transition-property: box-shadow, transform;
+    transition-property: box-shadow, transform;
+}
+
+.hvr-grow-shadow:hover,
+.hvr-grow-shadow:focus,
+.hvr-grow-shadow:active {
+    box-shadow: 0 10px 10px -10px rgba(0, 0, 0, 0.5);
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
 }
 
 /*Sobre Nosotros*/
@@ -418,14 +460,14 @@ footer ul li a:hover {
     }
 
     .textoEncabezado {
-        font-size:1em;
+        font-size: 1em;
     }
-    
+
     .prodquimEncabezado {
         font-size: 3em;
         padding: 0.5em;
     }
-    
+
     .telefonoEncabezado {
         font-size: 1em;
         padding: 1em;
@@ -469,7 +511,7 @@ footer ul li a:hover {
 
     /*footer*/
 
-    .footercol2{
+    .footercol2 {
         display: none;
     }
 }
