--- a/style.css
+++ b/style.css
@@ -1,177 +1,5 @@
-* {
-    margin: 0;
-    padding: 0;
-}
-
 body {
-    font-family: 'Montserrat', sans-serif;
-    font-size: 62.5%;
-}
-
-.contenedorGeneral {
-    display: grid;
-    grid-template-areas: "nav nav nav"
-        "encabezado encabezado encabezado"
-        ". main ."
-        "footer footer footer";
-    grid-template-columns: 15% auto 15%;
-}
-
-
-/*Navegacion*/
-
-#btn-menu {
-    display: none;
-}
-
-header label {
-    display: none;
-}
-
-.menu ul li {
-    padding: 10px;
-    display: block;
-}
-
-.navegacion {
-    box-shadow: 1px 5px 25px -17px rgba(82, 82, 82, 0.5);
-    -webkit-box-shadow: 1px 5px 25px -17px rgba(82, 82, 82, 0.5);
-    -moz-box-shadow: 1px 5px 25px -17px rgba(82, 82, 82, 0.5);
-    position: sticky;
-    grid-area: nav;
-    top: 0px;
-    background-color: #fff;
-    padding: 2.5em 14% 2em 14%;
-    z-index: 2;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.logo {
-    max-width: 20em;
-}
-
-ul {
-    list-style: none;
-}
-
-.navegacion nav ul {
-    display: flex;
-    flex-wrap: nowrap;
-    justify-content: space-evenly;
-}
-
-.navegacion ul a {
-    text-decoration: none;
-    color: #242424;
-    font-weight: 500;
-    font-size: 1.4em;
-    padding-left: 1.5em;
-}
-
-.navegacion li a:hover {
-    text-decoration: underline #00abc2;
-    text-decoration-thickness: 0.2em;
-}
-
-/*Carac. Comunes*/
-h2 {
-    text-align: center;
-    font-size: 2.8em;
-    padding: 1em;
-    color: #383838;
-    padding-bottom: 2em;
-}
-
-.contenido {
-    grid-column-start: 2;
-}
-
-section {
-    padding: 3em 0em 3em 0em;
-    border-bottom: 1px solid #f0f0f0;
-    grid-area: main;
-}
-
-p {
-    line-height: 2em;
-    font-size: 1.2em;
-    margin-bottom: 2em;
-}
-
-.boton {
-    background-color: #0092a5;
-    padding: 1em 2em;
-    border: none;
-    color: white;
-    text-transform: uppercase;
-    font-weight: 700;
-    border-radius: 10px;
-}
-
-.inputTexto {
-    border-radius: 10px;
-    border: 1px solid #d9d9d9;
-    padding: 0.5em;
-    width: 60%;
-    min-width: 200px;
-    max-width: 500px;
-    margin: 1em;
-    background-color: #f8f8f8;
-}
-
-h4 {
-    color: #0092a5;
-    font-size: 2em;
-    margin: 1em;
-}
-
-/*Encabezado*/
-
-.fondoEncabezado {
-    background-image: url("images/fondo-encabezado.png");
-    width: 100%;
-    height: 500px;
-    grid-area: encabezado;
-    background-size: cover;
-    display: flex;
-    text-align: center;
-    align-items: center;
-    flex-direction: column;
-    justify-content: center;
-}
-
-.textoEncabezado {
-    color: white;
-    width: 100%;
-}
-
-.prodquimEncabezado {
-    font-size: 4em;
-    padding: 1em;
-    background-color: rgba(0, 0, 0, 0.5);
-    margin-bottom: 0.1em;
-}
-
-.telefonoEncabezado {
-    font-size: 1.3em;
-    font-weight: 500;
-    background-color: rgba(0, 0, 0, 0.6);
-    padding: 1em;
-}
-
-.botonEncabezado {
-    color: #0092a5;
-    margin-top: 1.5em;
-    font-size: 1.3em;
-    text-decoration: none;
-    background-image: linear-gradient(to right, #ECE9E6 0%, #FFFFFF 51%, #ECE9E6 100%);
-}
-
-.botonEncabezado:hover {
-    text-decoration: underline;
+    font-family: "Montserrat", sans-serif;
 }
 
 /*animaciones*/
@@ -217,29 +45,38 @@ h4 {
     transform: scale(1.1);
 }
 
-/*Sobre Nosotros*/
+/*Encabezado*/
 
-.contenedorSobreNosotros {
-    display: flex;
+#encabezado {
+    background: rgb(237,237,237);
+    background: linear-gradient(328deg, rgba(237,237,237,1) 0%, rgba(255,255,255,1) 50%, rgba(237,237,237,1) 100%);
 }
 
-.sobreNosotrosTexto {
-    max-width: 55%;
-    padding-right: 2.5em;
+#botonEncabezado {
+    background: #0092a5;
+    font-size: 1.3em;
+    border: none;
+}
+
+#botonEncabezado:hover {
+    text-decoration: underline;
+}
+
+/*Sobre nosotros*/
+
+#sobrenosotros div{
     text-align: justify;
 }
 
 /*Listado de Productos*/
 
 .listadoProductos {
-    padding: 1em;
-    margin-bottom: 2em;
     display: grid;
     grid-template-columns: 1.5fr 1fr 1fr;
     grid-template-rows: 1.6fr repeat(10, 1fr);
-    max-height: 450px;
+    max-height: 400px;
     overflow: auto;
-    font-size: 1.4em;
+    font-size: 14px;
 }
 
 .listadoProductos div:nth-child(6n+4),
@@ -256,262 +93,34 @@ h4 {
     font-weight: 600;
 }
 
-/*servicios*/
+/*Servicios*/
 
-.contenedorServicios {
-    display: flex;
-    flex-wrap: nowrap;
-    justify-content: space-around;
-}
-
-.serviciosCard {
-    text-align: center;
-    width: 30%;
-    display: inline-table;
-    margin-top: 3em;
-    margin-bottom: 3em;
+#servicios h3{
+    color: #0092a5;
+    font-size: 1.3em;
 }
 
 /*formulario*/
 
-#contacto .boton {
-    padding-left: 8em;
-    padding-right: 8em;
-    margin: 1em;
-}
-
-.contenedorFormulario {
-    display: flex;
-    flex-wrap: nowrap;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.contenedorImagen {
-    width: 45%;
-}
-
-.contenedorImagen img {
-    max-width: 100%;
-}
-
-#formulario {
-    width: 55%;
-    text-align: center;
-}
-
-#formulario label {
-    font-size: 1.4em;
-}
-
-textarea {
-    resize: none;
-    box-sizing: border-box;
-    height: 150px;
-}
-
-/* footer */
-
-.contenedorFooter {
-    display: flex;
-}
-
-footer {
-    background-color: #202020;
+#contacto button{
+    background-color:#0092a5;
     color: white;
-    padding: 7em 11% 7em 12%;
-    grid-area: footer;
 }
 
-footer p {
-    font-size: 1.2em;
-    margin-top: 1em;
-    width: 250px;
-}
-
-.footercol1 {
-    width: 70%;
-}
-
-footer ul li a {
-    color: #d9d9d9;
-    text-decoration: none;
-    font-weight: 700;
-    font-size: 1.3em;
-    display: inline-block;
-    padding-top: 1em;
-}
-
-footer ul li a:hover {
+#contacto button:hover{
     text-decoration: underline;
 }
 
-@media screen and (max-width: 1023px) {
-
-    /*general */
-
-    .contenedorGeneral {
-        grid-template-columns: 2% auto 2%;
-    }
-
-    /*navegacion*/
-
-    .navegacion {
-        z-index: 2;
-        height: 50px;
-    }
-
-    .logo {
-        max-width: 15em;
-    }
-
-    header label {
-        display: block;
-    }
-
-    .menu {
-        position: absolute;
-        top: 95px;
-        left: 0px;
-        width: 100%;
-        margin-left: -100%;
-        text-align: center;
-        background-color: white;
-    }
-
-    #btn-menu:checked~.menu {
-        margin: 0;
-    }
-
-    .menu ul {
-        flex-direction: column;
-    }
-
-    /*Sobre nosotros*/
-    .sobreNosotrosTexto {
-        max-width: 80%;
-    }
-
-    /*Listado Productos*/
-    .listadoProductos {
-        display: grid;
-        grid-template-columns: 2fr 1fr;
-        grid-template-rows: 1.5fr repeat(10, 1fr);
-        font-size: 1.3em;
-    }
-
-    .listadoProductos .TipoTabla {
-        display: none;
-    }
-
-    .listadoProductos div:nth-child(4n) {
-        background-color: rgb(247, 247, 247);
-    }
+footer li a{
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 0.8em !important;
 }
 
-/* Responsive Celular */
+footer li a:hover{
+    text-decoration: underline;
+}
 
-@media screen and (max-width: 744px) {
-
-    h2 {
-        padding: 1em;
-    }
-
-    section {
-        padding: 0em;
-    }
-
-    /*navegador*/
-
-    .menu {
-        position: absolute;
-        top: 90px;
-        width: 100%;
-    }
-
-    .navegacion {
-        padding: 2em 5em;
-        align-items: center;
-    }
-
-    .MenuHamburguesa {
-        display: none;
-    }
-
-    .logo {
-        max-width: 13em;
-    }
-
-    header label {
-        display: block;
-        width: 30px;
-        height: 30px;
-        padding: 10px;
-    }
-
-    /*encabezado*/
-
-    .fondoEncabezado {
-        width: 100%;
-        height: 300px;
-        grid-area: encabezado;
-        background-size: cover;
-        display: flex;
-    }
-
-    .textoEncabezado {
-        font-size: 1em;
-    }
-
-    .prodquimEncabezado {
-        font-size: 3em;
-        padding: 0.5em;
-    }
-
-    .telefonoEncabezado {
-        font-size: 1em;
-        padding: 1em;
-    }
-
-    /*sobre nosotros*/
-
-    #sobrenosotros iframe {
-        display: none;
-    }
-
-    .sobreNosotrosTexto {
-        max-width: 100%;
-        padding: 0em 2em 0em 2em;
-    }
-
-    /*servicios*/
-
-    .contenedorServicios {
-        flex-direction: column;
-    }
-
-    .contenedorServicios .serviciosCard {
-        width: 100%;
-        margin-bottom: 0em;
-    }
-
-    /*contacto*/
-
-    .contenedorImagen {
-        display: none;
-    }
-
-    .contenedorFormulario {
-        width: 100%;
-    }
-
-    #formulario {
-        width: 100%;
-    }
-
-    /*footer*/
-
-    .footercol2 {
-        display: none;
-    }
+footer div p{
+    font-size: 0.7em !important;
 }
