--- a/style.css
+++ b/style.css
@@ -4,6 +4,23 @@ body {
 
 /*animaciones*/
 
+.hvr-grow {
+    display: inline-block;
+    vertical-align: middle;
+    -webkit-transform: perspective(1px) translateZ(0);
+    transform: perspective(1px) translateZ(0);
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+    -webkit-transition-property: transform;
+    transition-property: transform;
+  }
+
+  .hvr-grow:hover, .hvr-grow:focus, .hvr-grow:active {
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
+  }
+
 .hvr-float {
     display: inline-block;
     vertical-align: middle;
@@ -98,6 +115,10 @@ body {
 #servicios h3{
     color: #0092a5;
     font-size: 1.3em;
+}
+
+.cardServicios:hover{
+    background-color: rgb(248, 248, 248);
 }
 
 /*formulario*/
