--- a/scss/_estructura.scss
+++ b/scss/_estructura.scss
@@ -49,6 +49,9 @@ $colorTablaHijos: rgb(247, 247, 247);
         color: $colorPrincipal;
         font-size: $textoSubtitulos;
     }
+    .iconservicios{
+        max-width: 130px;
+    }
 }
 
 /*footer*/
