--- a/css/style.css
+++ b/css/style.css
@@ -4,11 +4,13 @@ body {
 
 /*Encabezado*/
 #encabezado {
-  background: #ededed;
-  background: linear-gradient(328deg, #ededed 0%, white 50%, #ededed 100%); }
+  background: #00bdd6;
+  background: radial-gradient(circle, #00bdd6 0%, #dafbff 100%); }
+  #encabezado p {
+    font-weight: 500; }
 
 /*Sobre Nosotros*/
-#sobrenosotros {
+#sobre-nosotros {
   text-align: justify; }
 
 /*Listado de Productos*/
@@ -54,18 +56,65 @@ footer li:hover {
 footer div p {
   font-size: 0.7em !important; }
 
-/*Botones*/
-#botonencabezado {
-  background: #0092a5;
-  font-size: 1.3em;
-  border: none; }
-  #botonencabezado:hover {
+.botton, .btnprimario, .btnsecundario, .btnformulario {
+  border-radius: 15px;
+  border: solid 0.5px black; }
+
+.btnprimario {
+  color: black;
+  background-color: white; }
+  @media (max-width: 2000px) {
+    .btnprimario {
+      width: 300px; } }
+  @media (max-width: 768px) {
+    .btnprimario {
+      width: 90%; } }
+  @media (max-width: 425px) {
+    .btnprimario {
+      width: 100%; } }
+  .btnprimario:hover {
+    background-color: white;
+    color: black;
+    font-weight: 500;
+    border: solid 0.5px black;
     text-decoration: underline; }
 
-#contacto button {
-  background-color: #0092a5;
-  color: white; }
-  #contacto button:hover {
+.btnsecundario {
+  color: black;
+  background-color: lightgray; }
+  @media (max-width: 2000px) {
+    .btnsecundario {
+      width: 300px; } }
+  @media (max-width: 768px) {
+    .btnsecundario {
+      width: 90%; } }
+  @media (max-width: 425px) {
+    .btnsecundario {
+      width: 100%; } }
+  .btnsecundario:hover {
+    background-color: lightgray;
+    color: black;
+    font-weight: 500;
+    border: solid 0.5px black;
+    text-decoration: underline; }
+
+.btnformulario {
+  color: black;
+  background-color: lightgray; }
+  @media (max-width: 2000px) {
+    .btnformulario {
+      width: 300px; } }
+  @media (max-width: 768px) {
+    .btnformulario {
+      width: 90%; } }
+  @media (max-width: 425px) {
+    .btnformulario {
+      width: 100%; } }
+  .btnformulario:hover {
+    background-color: lightgray;
+    color: black;
+    font-weight: 500;
+    border: solid 0.5px black;
     text-decoration: underline; }
 
 .cardservicios:hover {
@@ -85,25 +134,6 @@ footer div p {
 .hvr-grow:hover, .hvr-grow:focus, .hvr-grow:active {
   -webkit-transform: scale(1.1);
   transform: scale(1.1); }
-
-.hvr-float {
-  display: inline-block;
-  vertical-align: middle;
-  -webkit-transform: perspective(1px) translateZ(0);
-  transform: perspective(1px) translateZ(0);
-  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-  -webkit-transition-duration: 0.3s;
-  transition-duration: 0.3s;
-  -webkit-transition-property: transform;
-  transition-property: transform;
-  -webkit-transition-timing-function: ease-out;
-  transition-timing-function: ease-out; }
-
-.hvr-float:hover,
-.hvr-float:focus,
-.hvr-float:active {
-  -webkit-transform: translateY(-5px);
-  transform: translateY(-5px); }
 
 .hvr-grow-shadow {
   display: inline-block;
