--- a/scss/_colores.scss
+++ b/scss/_colores.scss
@@ -1,1 +1,7 @@
 $colorPrincipal: #0092a5;
+
+$colorbtn:(
+    primario: white,
+    secundario: rgb(211, 211, 211),
+    formulario: rgb(211, 211, 211),
+);
