--- a/scss/_colores.scss
+++ b/scss/_colores.scss
@@ -1,7 +1,8 @@
 $colorPrincipal: #0092a5;
+$colorSecundario: #E1D89F;
 
 $colorbtn:(
     primario: white,
-    secundario: rgb(211, 211, 211),
-    formulario: rgb(211, 211, 211),
+    secundario: $colorSecundario,
+    formulario: #DDC3D0,
 );
