--- a/scss/_estructura.scss
+++ b/scss/_estructura.scss
@@ -4,11 +4,14 @@ $colorTablaHijos: rgb(247, 247, 247);
 /*Encabezado*/
 
 #encabezado {
-    background: rgb(0, 189, 214);
-    background: radial-gradient(circle, rgba(0, 189, 214, 1) 0%, rgba(218, 251, 255, 1) 100%);
+    background: rgba(218, 251, 255, 1);
+    background: radial-gradient(circle, rgba(199, 248, 255, 0.178) 0%, rgba(218, 251, 255, 1) 100%);
 
     p {
         font-weight: 500;
+    }
+    h1{
+        text-decoration: underline white 2px;
     }
 }
 
@@ -44,19 +47,6 @@ $colorTablaHijos: rgb(247, 247, 247);
     font-weight: 600;
     background-color: white;
     z-index: 1 !important;
-}
-
-/*Servicios*/
-
-#servicios {
-    h3 {
-        color: $colorPrincipal;
-        font-size: $textoSubtitulos;
-    }
-
-    .iconservicios {
-        max-width: 130px;
-    }
 }
 
 /*footer*/
