--- a/scss/components/_cards.scss
+++ b/scss/components/_cards.scss
@@ -1,4 +1,12 @@
 .cardservicios {
+    h3 {
+        color: black;
+        text-decoration: underline $colorSecundario 1px;
+        font-size: $textoSubtitulos;
+    }
+    .iconservicios {
+        max-width: 130px;
+    }
     &:hover {
         background-color: rgb(248, 248, 248);
     }
