--- a/scss/components/_cards.scss
+++ b/scss/components/_cards.scss
@@ -1,6 +1,6 @@
 .cardservicios {
     h3 {
-        color: black;
+        color: $colorPrincipal;
         text-decoration: underline $colorSecundario 1px;
         font-size: $textoSubtitulos;
     }
